# VaR-project-C-20

./: CMakeLists.txt  Doxyfile  README.md  ReadMe.md
html/: DataLoader_8cpp.html  DataLoader_8cpp__incl.map  DataLoader_8cpp__incl.md5  DataLoader_8hpp.html  DataLoader_8hpp__dep__incl.map  DataLoader_8hpp__dep__incl.md5  DataLoader_8hpp__incl.map  DataLoader_8hpp__incl.md5  DataLoader_8hpp_source.html  HistoricalVaRCalculator_8cpp.html  HistoricalVaRCalculator_8cpp__incl.map  HistoricalVaRCalculator_8cpp__incl.md5  HistoricalVaRCalculator_8hpp.html  HistoricalVaRCalculator_8hpp__dep__incl.map  HistoricalVaRCalculator_8hpp__dep__incl.md5  HistoricalVaRCalculator_8hpp__incl.map  HistoricalVaRCalculator_8hpp__incl.md5  HistoricalVaRCalculator_8hpp_source.html  Instrument_8hpp.html  Instrument_8hpp__dep__incl.map  Instrument_8hpp__dep__incl.md5  Instrument_8hpp__incl.map  Instrument_8hpp__incl.md5  Instrument_8hpp_source.html  MCStatistics_8cpp.html  MCStatistics_8cpp__incl.map  MCStatistics_8cpp__incl.md5  MCStatistics_8hpp.html  MCStatistics_8hpp__dep__incl.map  MCStatistics_8hpp__dep__incl.md5  MCStatistics_8hpp__incl.map  MCStatistics_8hpp__incl.md5  MCStatistics_8hpp_source.html  MonteCarloEngine_8cpp.html  MonteCarloEngine_8cpp__incl.map  MonteCarloEngine_8cpp__incl.md5  MonteCarloVaRCalculator_8cpp.html  MonteCarloVaRCalculator_8cpp__incl.map  MonteCarloVaRCalculator_8cpp__incl.md5  MonteCarloVaRCalculator_8hpp.html  (+280 more)
latex/: DataLoader_8cpp.tex  DataLoader_8cpp__incl.md5  DataLoader_8hpp.tex  (+155 more)
src/: CMakeLists.txt  DataLoader.cpp  HistoricalVaRCalculator.cpp  MCStatistics.cpp  MonteCarloEngine.cpp  MonteCarloVaRCalculator.cpp  ParametricVaRCalculator.cpp  Portfolio.cpp  ReturnCalculator.cpp  RiskModel.cpp  VaREngine.cpp  main.cpp
tests/: CMakeLists.txt  test_DataLoader.cpp  test_MonteCarlo.cpp  test_Portfolio.cpp  test_RiskModel.cpp  test_VaR.cpp  test_main.cpp
(+69 files in other folders)
